--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,3 +1,32 @@
 .nav {
-  border: 1px solid red;
+  display: flex;
+  justify-content: center;
+  height: 5em;
+  box-shadow:0px 1px 1px #ccc;
+  background-color: white;
+}
+
+.container {
+  display: flex;
+  justify-content: flex-end;
+  width: 80%;
+}
+
+.title {
+  flex-grow: 2;
+}
+
+.nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.nav li {
+  display: flex;
+  align-items: center;
+}
+.nav a {
+  display: flex;
+  align-items: center;
+	padding: 10px 15px;
 }
