--- a/src/components/Root.css
+++ b/src/components/Root.css
@@ -1,3 +1,27 @@
+*,
+html,
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  height: 100%;
+  font-size: 1em;
+  color: #444;
+}
+
+body {
+  background-color: #EEE;
+}
+a {
+  text-decoration: none;
+}
+
+li {
+  list-style: none;
+}
+
 .root {
   display: flex;
+  flex-direction: column;
+  height: 100%;
 }
