--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -2,4 +2,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.signUpInput {
+  width: 200px;
+  height: 25px;
+  border: 1px solid black;
+  border-radius: 2px;
+  margin: 5px 5px 5px 5px;
+}
+
+.signUpButton {
+  border-style: none;
+  margin: 2px 2px 2px 2px;
+  height: 30px;
+  width: 200px;
+  margin: 5px 5px 5px 5px;
 }
