--- a/src/containers/VideoList.css
+++ b/src/containers/VideoList.css
@@ -1,4 +1,11 @@
-.main {
+.container {
   display: flex;
   flex-wrap: wrap;
+  border: 10px solid goldenrod;
+}
+
+.item {
+  width: calc(33.33% - 20px);
+  border: 1px solid black;
+  margin: 9px;
 }
