--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,3 +1,27 @@
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  color: #333;
+  font-size: 1em;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+:global #root {
+  margin: 0;
+  padding: 0;
+}
+
 .app {
-  
+  font-family: -apple-system, BlinkMacSystemFont,
+    "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
+    "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
 }
