--- a/src/containers/VideoList.css
+++ b/src/containers/VideoList.css
@@ -1,11 +1,20 @@
 .container {
+  margin-top: 6em;
   display: flex;
   flex-wrap: wrap;
-  border: 10px solid goldenrod;
+  justify-content: space-between;
 }
 
 .item {
-  width: calc(33.33% - 20px);
-  border: 1px solid black;
-  margin: 9px;
+  width: calc(32% - 20px);
+  margin: 20px 0;
+  height: 32em;
+  box-shadow: 0 20px 20px rgba(0,0,0,.08);
+  transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+}
+
+.item:hover {
+  box-shadow: 0 40px 40px rgba(0,0,0,.16);
+  transform: translate(0,-20px);
+  transition-delay: 0s !important;
 }
