--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,7 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  height: 4em;
+  height: 60px;
   padding-top: 2px;
   box-shadow: 0px 2px 40px 0px rgba(0,0,0,0.08);
   background-color: rgba(255, 255, 255, .98);
