--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -2,11 +2,16 @@
   box-sizing: border-box;
 }
 
+html {
+  height: 100%;
+}
+
 body {
   margin: 0;
   padding: 0;
   color: #333;
   font-size: 1em;
+  min-height: 100%;
 }
 
 a {
@@ -22,6 +27,6 @@ a {
 .app {
   font-family: -apple-system, BlinkMacSystemFont,
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell",
-    "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+    "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  height: 100vh;
 }
