--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,5 +1,7 @@
-.inputs input[type="text"] {
-  padding: 10px;
-  border: solid 1px #dcdcdc;
+.inputs {
+  padding: 5px;
+  outline: none;
+ /* color: red;*/
+  /*border: solid 1px #dcdcdc;*/
   transition: box-shadow 0.3s, border 0.3s;
 }
