--- a/src/components/VideoList.css
+++ b/src/components/VideoList.css
@@ -6,8 +6,8 @@
 }
 
 .item {
-  width: calc(32% - 20px);
-  margin: 20px 0;
+  width: calc(32% - 25px);
+  margin: 20px;
   height: 32em;
   box-shadow: 0 20px 20px rgba(0,0,0,.08);
   transition: all 250ms cubic-bezier(.02, .01, .47, 1);
@@ -17,4 +17,24 @@
   box-shadow: 0 40px 40px rgba(0,0,0,.16);
   transform: translate(0,-20px);
   transition-delay: 0s !important;
+}
+
+@media (max-width: 1400px) {
+  .item {
+    width: 45%;
+    margin: 15px;
+    height: 32em;
+    box-shadow: 0 20px 20px rgba(0,0,0,.08);
+    transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  }
+}
+
+@media (max-width: 800px) {
+  .item {
+    width: 100%;
+    margin: 20px 0;
+    height: 24em;
+    box-shadow: 0 20px 20px rgba(0,0,0,.08);
+    transition: all 250ms cubic-bezier(.02, .01, .47, 1);
+  }
 }
