--- a/src/components/Comment.css
+++ b/src/components/Comment.css
@@ -1,7 +1,47 @@
+.container {
+  padding-top: 1px;
+  background-color: rgb(204, 245, 255);
+  height: 295px;
+  overflow: auto;
+  border: none;
+  border-bottom: 1px solid black;
+/*  box-shadow: inset 0px 1px 2px #4f4f4f;*/
+}
+
+.comment {
+  background-color: rgb(204, 245, 255);
+}
+
 .inputs {
+  display: flex;
+  flex-direction: column;
+  width: 75%;
+  margin: .3em;
   padding: 5px;
   outline: none;
- /* color: red;*/
-  /*border: solid 1px #dcdcdc;*/
+  border: none;
+  border-radius: 5px;
+  border-bottom: 1px solid black;
+  box-shadow: 0px 1px 2px #4f4f4f;
   transition: box-shadow 0.3s, border 0.3s;
+}
+
+.button {
+  border-radius: 10px;
+  outline: none;
+  background: #e6e6ff;
+  box-shadow: 0px 1px 2px #4f4f4f;
+  transition-property: background;
+  transition: all .1s linear;
+  transition-timing-function: linear;
+}
+
+.button:active {
+  box-shadow: 0px 1px 2px #4f4f4f;
+  transform: translateY(3px);
+}
+
+.button:hover {
+  border-radius: 10px;
+  background: #ff7b29;
 }
