Final push for pres

--- a/src/components/VideoEntry.css
+++ b/src/components/VideoEntry.css
@@ -1,11 +1,11 @@
-.container {
+/*.container {
   width: 100%;
   height: 100%;
   display: flex;
   flex-direction: column;
-}
+}*/
 
-.video iframe {
+/*.video iframe {
   width: 100%;
   height: 250px;
 }
@@ -25,4 +25,4 @@
 
 .description {
   margin: 10px 0;
-}
+}*/
